<resources>
    <string name="app_name">TreadmillAssistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_training_history">Training history</string>
    <string name="menu_settings">Settings</string>
    <string name="total_distance">Total distance: %1$s km</string>
    <string name="distance">%1$s km</string>
    <string name="total_duration_minutes">Total duration: %1$s min</string>
    <string name="calendar_item_duration">Duration: %1$s min</string>
    <string name="duration_minutes">%1$s min</string>
    <string name="duration_seconds">%1$s s</string>
    <string name="current_duration_less_than_10_seconds">%1$s:0%2$s</string>
    <string name="current_duration_more_than_10_seconds">%1$s:%2$s</string>
    <string name="duration_hours">%1$s h</string>
    <string name="percentage">%1$s%%</string>
    <string name="pace">%1$s\'</string>
    <string name="calories">%1$s kcal</string>
    <string name="speed">%1$s km/h</string>
    <string name="stop">stop</string>
    <string name="resume">resume</string>
    <string name="start">start</string>
    <string name="training_finished">"training finished,\n start new?"</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="weight">%1$s kg</string>
    <string name="finish">finish</string>
    <string name="add_new">add new</string>
    <string name="cancel">cancel</string>
    <string name="edit">edit</string>
    <string name="select_plan">select plan</string>
    <string name="no_training_plan">no training plan</string>
    <string name="search">search</string>
    <string name="duration_label">duration</string>
    <string name="distance_label">distance</string>
    <string name="tilt_label">tilt</string>
    <string name="speed_label">speed</string>
    <string name="default_media_link">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="training_phases_label">Training phases</string>
    <string name="media_link_label">media link</string>
    <string name="average_pace_label">average pace</string>
    <string name="average_tilt_label">average tilt</string>
    <string name="calories_label">calories</string>
    <string name="average_speed">average speed</string>
    <string name="upcoming_status">upcoming</string>
    <string name="in_progress_status">in progress</string>
    <string name="finished_status">finished</string>
    <string name="abandoned_status">abandoned</string>
    <string name="paused_status">paused</string>
    <string name="remove">Remove</string>
    <string name="treadmill_selection_label">Treadmill</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="training_plan_label">Training plan</string>
    <string name="media_link_label_uppercase">Media link</string>
    <string name="save">save</string>
    <string name="plan_name_hint">plan name</string>
    <string name="add_new_phase_button_label">Add new phase</string>
    <string name="date_label_lowercase">date</string>
    <string name="average_speed_label">average speed</string>
    <string name="sign_in_label">Sign in</string>
    <string name="e_mail_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="register_label">Register</string>
    <string name="minutes_hint">minutes</string>
    <string name="speed_hint">km/h</string>
    <string name="degrees_hint">degrees</string>
    <string name="profile_picture_content_description">profile picture</string>
    <string name="nickname_label">Nickname</string>
    <string name="weight_label">Weight</string>
    <string name="age_label">Age</string>
    <string name="total_distance_label">Total distance</string>
    <string name="total_duration_label">Total duration</string>
    <string name="number_of_workouts_label">Number of workouts</string>
    <string name="longest_distance_label">Longest distance</string>
    <string name="longest_duration_label">Longest duration</string>
    <string name="total_calories_label">Total calories</string>
    <string name="log_out_button_label">Log out</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="next_label">next</string>
    <string name="age_hint">age</string>
    <string name="weight_hint">weight</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="username_hint">username</string>
    <string name="default_double_value">0.0</string>
    <string name="degrees_label">degrees</string>
    <string name="pace_label">pace</string>
    <string name="time_label_lowercase">time</string>
    <string name="progress_label">progress</string>
    <string name="confirm_label">confirm</string>
    <string name="month_and_year">%1$s %2$s</string>
    <string name="treadmill_name_hint">treadmill name</string>
    <string name="select_treadmill">select treadmill</string>
    <string name="no_treadmill">no treadmill</string>
    <string name="min_speed_hint">min speed</string>
    <string name="max_speed_hint">max speed</string>
    <string name="max_tilt_hint">max tilt</string>
    <string name="min_tilt_hint">min tilt</string>
    <string name="change_user_data_label">Change user data</string>
    <string name="change_password_label">Change password</string>
    <string name="old_password_hint">old password</string>
    <string name="confirm_new_password_hint">confirm new password</string>
    <string name="new_password_hint">new password</string>
    <string name="change_data_label">change data</string>
    <string name="change_health_data_label">Change health data</string>
    <string name="select_label">select</string>
    <string name="clear_user_data_label">clear user data</string>
    <string name="are_you_sure_label">Are you sure?</string>
    <string name="add_new_training_label">Add new training</string>
    <string name="add_new_training_plan_menu_item_label">Add new training plan</string>
    <string name="start_new">start new</string>
</resources>