<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/change_user_data_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/change_user_data_label"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/change_first_name_input_layout"
        app:layout_constraintTop_toBottomOf="@id/change_user_data_text_view"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/change_first_name_input"
            android:inputType="textPersonName"
            android:hint="@string/first_name_hint"
            android:textSize="25sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/change_last_name_input_layout"
        app:layout_constraintTop_toBottomOf="@id/change_first_name_input_layout"
        android:layout_marginTop = "20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/change_last_name_input"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:textSize="25sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/change_username_name_input_layout"
        app:layout_constraintTop_toBottomOf="@id/change_last_name_input_layout"
        android:layout_marginTop = "20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/change_username_input"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textSize="25dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/change_user_data_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/change_data_label"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>