<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/change_health_data_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/change_health_data_label"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/change_age_input_layout"
        app:layout_constraintTop_toBottomOf="@id/change_health_data_text_view"
        android:layout_marginTop = "150dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/change_age_input"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:textSize="25sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/change_weight_input_layout"
        app:layout_constraintTop_toBottomOf="@id/change_age_input_layout"
        android:layout_marginTop = "20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/change_weight_input"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textSize="25sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/change_health_data_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/change_data_label"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>