<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/treadmill_remove_button">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id = "@+id/treadmill_name_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/treadmill_name_input"
                android:hint="@string/treadmill_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/treadmill_name_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/treadmill_min_speed_input_layout"
            android:id = "@+id/treadmill_max_speed_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/treadmill_max_speed_input"
                android:hint="@string/max_speed_hint"
                android:inputType="number|numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/treadmill_name_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/treadmill_max_speed_input_layout"
            android:id = "@+id/treadmill_min_speed_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/treadmill_min_speed_input"
                android:hint="@string/min_speed_hint"
                android:inputType="number|numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/treadmill_max_speed_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/treadmill_min_tilt_input_layout"
            android:id = "@+id/treadmill_max_tilt_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/treadmill_max_tilt_input"
                android:hint="@string/max_tilt_hint"
                android:inputType="numberSigned|numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/treadmill_min_speed_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/treadmill_max_tilt_input_layout"
            android:id = "@+id/treadmill_min_tilt_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/treadmill_min_tilt_input"
                android:hint="@string/min_tilt_hint"
                android:inputType="numberSigned|numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/treadmill_remove_button"
        app:layout_constraintBottom_toTopOf="@id/treadmill_save_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text = "@string/remove"
        android:backgroundTint="@color/remove_red"/>
    
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id = "@+id/treadmill_save_button"
        android:text = "@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf = "@id/cancel_button"
        android:layout_margin="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id = "@+id/cancel_button"
        android:text = "@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/treadmill_save_button"
        app:layout_constraintTop_toTopOf="@id/treadmill_save_button"
        app:layout_constraintStart_toEndOf="@id/treadmill_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd = "10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>